--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
 
 
     <section class="article container-fluid">
-        <article class="marketing">
+        <article>
 
-            <h4><span> &#xe800; </span>Marketing</h4>
+            <h4><span> &#xe802; </span>Marketing</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eligendi recusandae facilis veniam
                 ipsam eaque minus quis dignissimos magni sint labore quidem laudantium, consectetur suscipit, tenetur
                 consequatur odit perferendis! Nam laudantium quis id soluta nihil dolorum dicta possimus ad at!</p>
         </article>
-        <article class="design">
+        <article class= "design">
 
-            <h4><span>&#xe801;</span>Design</h4>
+            <h4><span> &#xe800; </span>Design</h4>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio veritatis voluptas pariatur,
                 corporis aut fugiat ipsum animi vitae commodi consequatur modi nulla quo a omnis laborum provident sunt
                 obcaecati quidem cum quaerat porro. Maxime, nemo! Dolor, nemo asperiores.</p>
         </article>
-        <article class="development">
+        <article >
 
-            <h4><span>&#xe838;</span>Development</h4>
+            <h4><span> &#xe801; </span>Development</h4>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt deleniti eum at officiis consequatur
                 debitis consequuntur, alias minus, voluptate id. Alias
                 dolore minus modi atque porro quas, delectus ad enim sint totam expedita repellat quos tempore impedit
@@ -139,46 +139,46 @@
             <div class="all">
                 <article>
                     <div class="kuleczka"></div>
-                    <p style="max-width: 70%;"> <i> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
+                    <p style="max-width: 70%;">  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
                             accusamus ipsum eaque,
                             incidunt
-                            minus deleniti."</i></p>
-                    <h4> <b> <i> -Ferdinand A. Porsche</i></b></h4>
+                            minus deleniti."</p>
+                    <h4>  -Ferdinand A. Porsche</h4>
 
 
                 </article>
 
                 <article>
                     <div class="kuleczka"></div>
-                    <p style="max-width: 70%;"> <i>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+                    <p style="max-width: 70%;"> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
                             neque
                             sed accusantium
                             repellendus
-                            quasi amet, soluta deleniti."</i> </p>
-                    <h4> <b> <i> -Steve Jobs</i></b> </h4>
+                            quasi amet, soluta deleniti." </p>
+                    <h4>  -Steve Jobs </h4>
                 </article>
             </div>
 
             <div class="all2">
                 <article>
                     <div class="kuleczka"></div>
-                    <p style="max-width: 70%;"> <i> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                    <p style="max-width: 70%;">  "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
                             minima
                             qui et, quasi
                             numquam
-                            deleniti culpa sunt minus quos! Iste?"</i></p>
-                    <h4> <b> <i> -Frank Chimero</i></b></h4>
+                            deleniti culpa sunt minus quos! Iste?"</p>
+                    <h4>  -Frank Chimero</h4>
                 </article>
 
                 <article>
                     <div class="kuleczka"></div>
 
-                    <p style="max-width: 70%;"> <i> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+                    <p style="max-width: 70%;">  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
                             quis,
                             quod delectus qui
                             inventore
-                            itaque possimus incidunt maiores perferendis earum."</i></p>
-                    <h4> <b> <i> -Ferdinand A. Porsche</i></b></h4>
+                            itaque possimus incidunt maiores perferendis earum."</p>
+                    <h4>  -Ferdinand A. Porsche</h4>
 
                 </article>
             </div>
